--- a/index.html
+++ b/index.html
@@ -1,60 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulário de Cadastro</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cadastro</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <meta name="color-scheme" content="light dark">
+    <meta name="description" content="Formulário de cadastro acessível e responsivo.">
+    <meta name="theme-color" content="#2575fc">
 </head>
+
 <body>
-  <div class="container">
-    
-    <!-- Lado esquerdo com imagem -->
-    <div class="left">
-      <div class="overlay"></div>
+    <div class="layout">
+        <aside class="hero" aria-hidden="true">
+            <div class="hero__overlay" aria-hidden="true"></div>
+        </aside>
+
+        <main class="content">
+            <section class="form-card" aria-labelledby="form-title">
+                <h1 id="form-title" class="form-card__title">Cadastro</h1>
+
+                <form id="signup-form" class="form" action="#" method="post">
+                    <div class="form__field">
+                        <label for="nome">Nome completo</label>
+                        <input type="text" id="nome" name="nome" placeholder="Digite seu nome" autocomplete="name"
+                            required>
+                    </div>
+
+                    <div class="form__field">
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" name="email" placeholder="exemplo@email.com" autocomplete="email"
+                            inputmode="email" required>
+                    </div>
+
+                    <div class="form__field">
+                        <label for="senha">Senha</label>
+                        <input type="password" id="senha" name="senha" placeholder="Digite sua senha"
+                            autocomplete="new-password" minlength="8" required>
+                    </div>
+
+                    <div class="form__field">
+                        <label for="nascimento">Data de nascimento</label>
+                        <input type="date" id="nascimento" name="nascimento" required>
+                    </div>
+
+                    <div class="form__field">
+                        <label for="genero">Gênero</label>
+                        <select id="genero" name="genero" required>
+                            <option value="">Selecione</option>
+                            <option value="masculino">Masculino</option>
+                            <option value="feminino">Feminino</option>
+                            <option value="outro">Outro</option>
+                            <option value="prefiro_nao_dizer">Prefiro não dizer</option>
+                        </select>
+                    </div>
+
+                    <fieldset class="form__fieldset">
+                        <legend>Interesses</legend>
+                        <div class="form__options">
+                            <label class="option">
+                                <input type="checkbox" name="interesses" value="tecnologia">
+                                Tecnologia
+                            </label>
+                            <label class="option">
+                                <input type="checkbox" name="interesses" value="musica">
+                                Música
+                            </label>
+                            <label class="option">
+                                <input type="checkbox" name="interesses" value="esportes">
+                                Esportes
+                            </label>
+                        </div>
+                    </fieldset>
+
+                    <fieldset class="form__fieldset">
+                        <legend>Receber novidades?</legend>
+                        <div class="form__options">
+                            <label class="option">
+                                <input type="radio" name="novidades" value="sim" required>
+                                Sim
+                            </label>
+                            <label class="option">
+                                <input type="radio" name="novidades" value="nao">
+                                Não
+                            </label>
+                        </div>
+                    </fieldset>
+
+                    <button type="submit" class="button button--primary">Cadastrar</button>
+                </form>
+            </section>
+        </main>
     </div>
-    
-    <!-- Lado direito com formulário -->
-    <div class="right">
-      <form class="form">
-        <h1>Cadastro</h1>
-
-        <label for="nome">Nome completo</label>
-        <input type="text" id="nome" placeholder="Digite seu nome" required>
-
-        <label for="email">E-mail</label>
-        <input type="email" id="email" placeholder="exemplo@email.com" required>
-
-        <label for="senha">Senha</label>
-        <input type="password" id="senha" placeholder="Digite sua senha" required>
-
-        <label for="nascimento">Data de nascimento</label>
-        <input type="date" id="nascimento" required>
-
-        <label for="genero">Gênero</label>
-        <select id="genero" required>
-          <option value="">Selecione</option>
-          <option value="masculino">Masculino</option>
-          <option value="feminino">Feminino</option>
-          <option value="outro">Outro</option>
-        </select>
-
-        <label>Interesses</label>
-        <div class="checkbox-group">
-          <label><input type="checkbox"> Tecnologia</label>
-          <label><input type="checkbox"> Música</label>
-          <label><input type="checkbox"> Esportes</label>
-        </div>
-
-        <label>Receber novidades?</label>
-        <div class="radio-group">
-          <label><input type="radio" name="novidades"> Sim</label>
-          <label><input type="radio" name="novidades"> Não</label>
-        </div>
-
-        <button type="submit">Cadastrar</button>
-      </form>
-    </div>
-  </div>
 </body>
+
 </html>
